REGRESSION(r281389): Text wraps unnecessarily within intrinsically-sized elements when using certain fonts and the inner HTML of the element contains a new line that is not preceded by a space https://bugs.webkit.org/show_bug.cgi?id=232939 <rdar://problem/85254819>

Reviewed by Alan Bujtas.

Source/WebCore:

We need newline characters to have the same width as space characters for 2 reasons:
1. Our code implicitly depends on it. We have places where we measure a newline character in one place,
       and then later realize that we shouldn't have included its with so we subtract out the width of
       the space character. (For more information, read the comments of this bugzilla bug.) This assumes
       that the width of the newline character is equal to the width of the space character.
2. We need it for correctness. Even if WebKit was entirely consistent about measuring the width of
       newline characters, we don't want to have the width of an element depend on the width of the
       newline character in the font. Every other browser forces newline characters to have the same
       width as space characters. And, even if we weren't concerned about compatibility (we are),
       we'd be producing bogus results because font designers aren't incentivized to put any meaningful
       values in their fonts for the width of a newline character, since no software actually uses it.

Luckily, we already have our "charactersTreatedAsSpace" infrastructure, so we can just tweak it to have
it set characters which are treated as space, but aren't the tab character, to have the same width as
the space character.

Test: fast/text/newline-width.html

* platform/graphics/WidthIterator.cpp:
(WebCore::WidthIterator::advanceInternal):

LayoutTests:

The div:before { position: absolute; } is necessary to trigger this bug; I assume it's necessary to
opt-out of IFC.

* fast/text/newline-width-expected.html: Added.
* fast/text/newline-width.html: Added.


Canonical link: https://commits.webkit.org/245805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287724 268f45cc-cd09-0410-ab3c-d52691b4dbfc